tests/neg-custom-args/captures/exception-definitions.check
-- Error: tests/neg-custom-args/captures/exception-definitions.scala:2:6 -----------------------------------------------
2 |class Err extends Exception: // error
  |^
  |reference (caps.cap : Any) is not included in allowed capture set {} of pure base class class Throwable
3 |  self: Err^ =>
-- Error: tests/neg-custom-args/captures/exception-definitions.scala:10:6 ----------------------------------------------
10 |class Err4(c: Any^) extends AnyVal // error
   |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |reference (Err4.this.c : Any^) is not included in allowed capture set {} of pure base class class AnyVal
-- Error: tests/neg-custom-args/captures/exception-definitions.scala:7:12 ----------------------------------------------
7 |    val x = c  // error
  |            ^
  |(c : Any^) cannot be referenced here; it is not included in the allowed capture set {} of pure base class class Throwable
-- Error: tests/neg-custom-args/captures/exception-definitions.scala:8:8 -----------------------------------------------
8 |  class Err3(c: Any^) extends Exception // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  reference (Err3.this.c : Any^) is not included in allowed capture set {} of pure base class class Throwable
